--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Run Python script
       run: python app.py  # Change this to your Python script's name.
       env:
-        HFToken: ${{ secrets.HFToken }}  # This passes the secret to your script as an environment variable.
+        HFToken: ${{ secrets.HFTOKEN }}  # This passes the secret to your script as an environment variable.
 
